@@ -4,9 +4,12 @@ the host system.
 
 For a detailed list of all changes see the file CHANGELOG.
 
-20-Feb-2006 (Lars Duening) -- Release 3.2.13
+28-Feb-2006 (Lars Duening) -- Release 3.2.13
 
     - Changed efuns:
+       + sscanf(): The new modifier '+' requires the matching of
+          the characters after a field in order to consider the field
+          as matched.
 
     - Corrected efuns:
 
