@@ -6,6 +6,9 @@ See the file HISTORY for a user-oriented summary of all the changes.
       'clone' flag unset.
   - (string_spec, simulate.c) Renamed COMP_OBJ to the more intuitive
       COMPILE_OBJECT.
+  - (efuns.c) sscanf(): The new modifier '+' requires the matching of
+      the characters after a field in order to consider the field
+      as matched.
 
 20-Feb-2006  (Lars Duening)
   - (Makefile.in) Added a dependency to create patchlevel.h, even if
